--- a/todo-mvp-clean/build.gradle
+++ b/todo-mvp-clean/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     repositories {
         google()
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
         jcenter()
     }
     dependencies {
@@ -14,6 +17,10 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
+        
         jcenter()
     }
 }
